tests/baselines/reference/declarationEmitPrivateSymbolCausesVarDeclarationEmit2.errors.txt
tests/cases/compiler/c.ts(4,14): error TS2415: Class 'D' incorrectly extends base class 'C'.
  Types have separate declarations of a private property '[x]'.


==== tests/cases/compiler/a.ts (0 errors) ====
    export const x = Symbol();
    
==== tests/cases/compiler/b.ts (0 errors) ====
    import { x } from "./a";
    
    export class C {
      private [x]: number = 1;
    }
    
==== tests/cases/compiler/c.ts (1 errors) ====
    import { x } from "./a";
    import { C } from "./b";
    
    export class D extends C {
                 ~
!!! error TS2415: Class '{|D|0|}' incorrectly extends base class '{|C|1|}'.
!!! error TS2415:   Types have separate declarations of a private property '[x]'.
!!! annotated symbol 0 tests/cases/compiler/c.ts:4:14
!!! annotated symbol 1 tests/cases/compiler/b.ts:3:14
      private [x]: 12 = 12;
    }
    